--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/axios": "^0.14.0",
+    "@types/google-maps": "^3.2.2",
+    "@types/google-maps-react": "^2.0.5",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.47",
     "@types/react": "^16.9.41",
@@ -19,10 +21,10 @@
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "emotion-theming": "^10.0.27",
-    "framer-motion": "^1.11.1",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^7.2.0",
     "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
