--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
+    "cloudinary-core": "^2.10.1",
     "cloudinary-react": "^1.6.0",
     "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.27",
