--- a/package.json
+++ b/package.json
@@ -22,15 +22,12 @@
     "@types/redux-thunk": "^2.1.0",
     "cloudinary-core": "^2.10.1",
     "cloudinary-react": "^1.6.0",
-    "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.27",
-    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
     "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
-    "react-responsive-carousel": "^3.2.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux-devtools-extension": "^2.13.8",
@@ -38,6 +35,7 @@
     "typescript": "^3.7.5"
   },
   "scripts": {
+    "initialize": "npm install && react-scripts start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
