--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "scripts": {
     "initialize": "npm install && react-scripts start",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "CI=react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
