--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/axios": "^0.14.0",
     "@types/google-maps": "^3.2.2",
@@ -56,5 +55,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^9.5.0",
+    "jest-dom": "^4.0.0",
+    "react-test-render": "^1.1.2"
   }
 }
