--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cloudinary-react": "^1.6.0",
     "dotenv": "^8.2.0",
     "emotion-theming": "^10.0.27",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
